fix: z-index problem

--- a/themes/grimoire/source/css/index.styl
+++ b/themes/grimoire/source/css/index.styl
@@ -64,6 +64,8 @@ nav
   z-index 10
   menu(color-inverse-normal, color-primary)
 
+#bg-container
+  z-index 1!important
 #menu-logo-wrap
   display block
   margin-top -13px
@@ -573,3 +575,5 @@ one-column-desc()
     right 0px
     width auto
     height auto
+  #description .front .title 
+    font-size 18px
